committing all dashboard changes HTML 1) move towards bootstrap columns 2) remove maps code 3) list of bugs CSS make buttons readable. fix sizes

--- a/server/static/css/dashboard.css
+++ b/server/static/css/dashboard.css
@@ -208,11 +208,11 @@ c) 1000px - ... (desktops)
 
 .dashboardOfferLeftColumn {
 	float: left;
-	width: 20%;
+	width: 25%;
 }
 .dashboardOfferCenterColumn {
 	float: left;
-	width: 36%;
+	width: 20%;
 }
 .dashboardOfferRightColumn {
 	float: right;
